Fix function try blocks eg. void f() try {} catch {}

Remove unimplemented skip function body code (not needed)

BUG:73102